fix(Select): fix inline styles, allow truncation

--- a/packages/styles/scss/components/select/_select.scss
+++ b/packages/styles/scss/components/select/_select.scss
@@ -210,7 +210,6 @@
   }
 
   .#{$prefix}--select--inline .#{$prefix}--select-input {
-    width: auto;
     padding-right: $spacing-07;
     padding-left: $spacing-03;
     border-bottom: none;
